--- a/src/scss/common/base.scss
+++ b/src/scss/common/base.scss
@@ -1,5 +1,7 @@
-@import "~_normalize.css@7.0.0@normalize.css";
+@import "~normalize.css";
 @import "./color.scss";
+
+
 * {
   margin : 0;
   padding : 0;
