某个文件的详情

--- a/src/scss/common/color.scss
+++ b/src/scss/common/color.scss
@@ -1,5 +1,4 @@
-$fontFamily:
-Microsoft YaHei,
+$fontFamily: Microsoft YaHei,
 WenQuanYi Micro Hei,
 SF UI Text,
 Arial,
@@ -7,7 +6,7 @@ PingFang SC,
 Hiragino Sans GB,
 sans-serif;
 
-$grey : #a0a0a0;
+$grey: #a0a0a0;
 $lightgrey: #dddddd;
 
 $blockcolor: #fafbfc;
@@ -17,3 +16,7 @@ $backgroudcolor: #f2f3f8;
 $primarybtn: #45a2fb;
 $darkBlue: #0069ff;
 $lightBlue: #61a3e8;
+
+$red: #f87f8b;
+$darkRed: #ff8074;
+$orange: #f97749;
