--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -6,7 +6,7 @@
 $footerSecondHeight: 40px;
 $footerFontSize: 10px;
 $footerMinWidth: 900px;
-.footer-component {
+footer.footer-component {
   position: absolute;
   bottom: 0;
   width: 100%;
