--- a/src/components/MyFile/FileUploadBody/index.scss
+++ b/src/components/MyFile/FileUploadBody/index.scss
@@ -56,7 +56,8 @@ $bodyMarginBottom: 50px;
                 height: 240px;
                 width: 100%;
                 opacity: 0;
-                cursor: pointer
+                cursor: pointer;
+                z-index: 1000;
             }
             .file-name {
                 position: absolute;
@@ -83,6 +84,12 @@ $bodyMarginBottom: 50px;
                 font-size: 1.2em;
                 font-weight: 500;
             }
+
+            .progress {
+                width: 80%;
+                margin: 0 auto;
+            }
+
         }
 
         .body-setting {
@@ -121,7 +128,7 @@ $bodyMarginBottom: 50px;
 
                 }
             }
-            .btn {
+            .youyun-btn {
                 background-color: $primarybtn;
                 border-radius: 20px;
                 width: 400px;
@@ -129,6 +136,11 @@ $bodyMarginBottom: 50px;
                 margin: 0 auto;
                 text-align: center;
                 cursor: pointer;
+                &:hover{
+                    color: $primarybtn;
+                    transform: translateY(-1px);
+                    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+                }
                 span {
                     line-height: 45px;
                     color: white;
