--- a/src/components/MyFile/FileExtractCodeBody/index.scss
+++ b/src/components/MyFile/FileExtractCodeBody/index.scss
@@ -98,6 +98,12 @@ $bodyMarginBottom: 50px;
                     color: white;
                     text-align: center;
                     border-radius: 50px;
+                    cursor: pointer;
+                    &:hover{
+                        background-color: $primarybtn - 10;
+                        transform: translateY(-1px);
+                        box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+                    }
                 }
             }
             & > p:last-of-type {
