1.更改项目结构 2.文件下载功能

--- a/src/js/components/Footer/index.scss
+++ b/src/js/components/Footer/index.scss
@@ -1,7 +1,7 @@
-@import '../../scss/common/base.scss';
-@import '../../scss/common/color.scss';
-@import "../../scss/common/base";
-@import "../../scss/FileIndex";
+@import '../../../scss/common/base';
+@import '../../../scss/common/color';
+@import "../../../scss/common/base";
+@import "../../../scss/FileIndex";
 
 $footerSecondHeight: 40px;
 $footerFontSize: 10px;
