--- a/src/js/components/MyFile/FileBody/index.scss
+++ b/src/js/components/MyFile/FileBody/index.scss
@@ -1,5 +1,5 @@
-@import '../../../scss/common/base';
-@import '../../../scss/common/color';
+@import '../../../../scss/common/base';
+@import '../../../../scss/common/color';
 
 $bodyLeft: 10%;
 $spanWidth: 71px;
@@ -185,7 +185,7 @@ $bodyMinWidth: 900px;
                                 }
                                 .file-type {
                                     display: inline-block;
-                                    background: url('../../../icon/30/file.png') no-repeat center;
+                                    background: url('../../../../icon/30/file.png') no-repeat center;
                                     vertical-align: middle;
                                     height: 48px;
                                     width: 48px;
