--- a/src/js/components/MyFile/FileExtractCodeBody/index.scss
+++ b/src/js/components/MyFile/FileExtractCodeBody/index.scss
@@ -1,5 +1,5 @@
-@import '../../../scss/common/base';
-@import '../../../scss/common/color';
+@import '../../../../scss/common/base';
+@import '../../../../scss/common/color';
 
 $bodyWidth: 774px;
 $bodyMarginBottom: 50px;
@@ -19,7 +19,7 @@ $bodyMarginBottom: 50px;
                     left: -70px;
                     height: 60px;
                     width: 60px;
-                    background: url('../../../icon/90/vedio.png') no-repeat center;
+                    background: url('../../../../icon/90/vedio.png') no-repeat center;
                     background-size: 100%;
                 }
                 .file-info {
@@ -66,7 +66,7 @@ $bodyMarginBottom: 50px;
                     display: inline-block;
                     width: 18px;
                     height: 18px;
-                    background: url('../../../icon/tick.png') no-repeat center;
+                    background: url('../../../../icon/tick.png') no-repeat center;
                     vertical-align: bottom;
                     margin-right: 5px;
                 }
