--- a/src/js/components/MyFile/FileHeader/index.scss
+++ b/src/js/components/MyFile/FileHeader/index.scss
@@ -1,5 +1,5 @@
-@import '../../../scss/common/base';
-@import '../../../scss/common/color';
+@import '../../../../scss/common/base';
+@import '../../../../scss/common/color';
 
 $headerHeight: 50px;
 $navcolor: #474545;
