--- a/src/js/components/FileItem/index.scss
+++ b/src/js/components/FileItem/index.scss
@@ -1,5 +1,5 @@
-@import '../../../../scss/common/base';
-@import '../../../../scss/common/color';
+@import '../../../scss/common/base';
+@import '../../../scss/common/color';
 
 $bodyWidth: 1100px;
 $bodyMarginBottom: 50px;
@@ -29,7 +29,7 @@ $bodyMarginBottom: 50px;
                     left: 3%;
                     height: 60px;
                     width: 60px;
-                    background: url('../../../../icon/90/vedio.png') no-repeat center;
+                    background: url('../../../icon/90/vedio.png') no-repeat center;
                     background-size: 100%;
                 }
                 .file-info {
