--- a/src/js/components/FileHeader/index.scss
+++ b/src/js/components/FileHeader/index.scss
@@ -110,7 +110,7 @@ header.main-header {
                 position: relative;
                 display: inline-block;
                 margin: 0 5px;
-
+                cursor: pointer;
             }
             & > li:last-of-type {
                 margin-right: 50px;
