--- a/src/js/components/FileHeader/index.scss
+++ b/src/js/components/FileHeader/index.scss
@@ -11,6 +11,19 @@ a {
 
 @include cf('.clearfix');
 header.main-header {
+    //底部阴影
+    &::before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        bottom: 15px;
+        width: 100%;
+        height: 10px;
+        box-shadow: 0 15px 10px 0 rgba(0, 0, 0, 0.7);
+        border-radius: 200%;
+    }
+
+
     position: relative;
     min-width: $headerMinWidth;
     height: $headerHeight;
@@ -127,7 +140,7 @@ header.main-header {
                     color: white;
                     span {
                         position: relative;
-                        top:-12px;
+                        top: -12px;
                         color: white;
                         font-size: 10px;
                     }
