--- a/src/js/components/FileUpload/index.scss
+++ b/src/js/components/FileUpload/index.scss
@@ -136,11 +136,7 @@ $bodyMarginBottom: 50px;
                 margin: 0 auto;
                 text-align: center;
                 cursor: pointer;
-                &:hover{
-                    color: $primarybtn;
-                    transform: translateY(-1px);
-                    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
-                }
+                @include setBtnHoverShadowAndColor($primarybtn);
                 span {
                     line-height: 45px;
                     color: white;
