--- a/src/scss/common/base.scss
+++ b/src/scss/common/base.scss
@@ -25,6 +25,7 @@ ul {
 @mixin setBtnHoverShadowAndColor($baseColor) {
     @include setHoverColor($baseColor);
     &:hover {
+        cursor: pointer;
         transform: translateY(-1px);
         box-shadow: 0 7px 14px rgba(50, 50, 93, .1), 0 3px 6px rgba(0, 0, 0, .08);
     }
