--- a/src/js/components/FileDownload/index.scss
+++ b/src/js/components/FileDownload/index.scss
@@ -26,7 +26,7 @@ $bodyMarginTop: 50px;
                     width: calc(20% - 1px);
                     border-right: 1px solid $lightgrey;
                     a {
-                        color: $lightgrey;
+                        color: $grey;
                         font-size: 1.2em;
                     }
                 }
