--- a/src/js/components/FileExtractCode/index.scss
+++ b/src/js/components/FileExtractCode/index.scss
@@ -19,7 +19,7 @@ $bodyMarginBottom: 50px;
                     left: -70px;
                     height: 60px;
                     width: 60px;
-                    background: url('../../../icon/90/vedio.png') no-repeat center;
+                    background: no-repeat center;
                     background-size: 100%;
                 }
                 .file-info {
