--- a/src/js/components/SquareItems/SquareItem/index.scss
+++ b/src/js/components/SquareItems/SquareItem/index.scss
@@ -99,6 +99,9 @@
                         padding: 0 20px;
                         float: right;
                     }
+                    li:first-of-type{
+                        padding-right: 0;
+                    }
 
                 }
             }
